fixed spacing for lists in proj info

--- a/src/app/office/projects/detail/info/info.component.scss
+++ b/src/app/office/projects/detail/info/info.component.scss
@@ -7,6 +7,7 @@
   &__remaining {
     display: grid;
     grid-template-rows: 0fr;
+    margin-top: 12px;
     overflow: hidden;
     transition: all 0.5s ease-in-out;
 
